--- a/gb/23/11/20/n14120358.md
+++ b/gb/23/11/20/n14120358.md
@@ -13,39 +13,33 @@
 <p>陈以信表示，国防部在主权议题，绝对不能退缩，他们这样堂而皇之走进来，政府连话都不说，国际法上有禁反言，台湾始终不主张，国际就会认为那不是你的。海巡署坚称13海里，国防部明知道就在里面，内部却都不讲，这是国安漏洞，国防部必须尽快了解此事，作出正当回应。</p>
 <p>责任编辑：陈玟绮</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/6/5/n14010413.md#1">美中军舰台海险相撞 AIT主席：将继续自由航行</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/6/n14110724.md#1">共舰闯12海里？国安局：将部署大型船舰</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/9/n14113155.md#1">美中峰会 国会委员会促拜登在多方面挑战中共</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/10/n14114081.md#1">耶伦和何立峰结束会面 涉及多个议题</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/13/n14115590.md#1">美中船舰靠近太平岛？ 台立委：约3海里距离</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/15/n14117089.md#1">APEC峰会前美中军舰在台海较量 细节曝光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/16/n14117510.md#1">【翻墙必看】分析：蔡奇做太多肮脏事 命运如何</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538568.md#1">在野党攻击赖清德“打掉杂质”说 总统府3点说明</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538570.md#1">拍营区机场触法？顾立雄：法规8月上路将明确标示</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538500.md#1">美国压制红色供应链 经长：台湾半导体、AI、资安皆受惠</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/28/n14645158.md#1">六四抗命军长受审视频曝光 分析：中共末日已近</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14641240.md#1">中共APT31利用云服务对俄IT产业发动网攻</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/8/n10624963.md#1" target="_blank">捡纸鸣冤、“反毛”凉鞋与“毛语录仗”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/14/n10713843.md#1" target="_blank">德国绿嫩市政府官方网页推荐法轮功</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/28/n11285995.md#1" target="_blank">杨宁：从市委书记出丑说被膜拜的延安真相</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/10/7/20/n2971015.md#1" target="_blank">田璐：让正义和希望之声长鸣于全人类的上空</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/17/n14532918.md#1">夏至之“至”表示什么意义？ 留意这节气宜忌过好夏至</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/30/n14237654.md#1">“牛鸣地裂”一场大地震冥冥中竟安排了三年</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14534051.md#1">【未解之谜】深海最新神秘发现 改写“生命起源”的认知？！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/15/n14531783.md#1">浮生行吟：想想“长跑”这件事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/10/n14528102.md#1">宁死不降共的李民彝将军以及在岳飞故里的一段抗战故事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/21/n14535894.md#1">【车评】敞蓬良驹 2025 Mazda MX-5 Miata Club</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/21/n14535998.md#1">【时政春秋】川普两周期限 最后和平计划</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/21/n14536122.md#1">【马克时空】美军加速赴中东 伊朗顽强导弹反击</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/20/n14535495.md#1">中共禁酒令引发骨牌效应 多行业同步受挫</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/19/n14535067.md#1">MIT研究发现ChatGPT损害人的思考能力</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/20/n14535433.md#1">罕见新星亮度突增400万倍 在北美肉眼可见</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/20/n14535224.md#1">《侏罗纪世界：重生》英国首映 观众评价出炉</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14534319.md#1">林志玲弃车“街头狂奔” 背后原因曝光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/20/n14535401.md#1">冈恩删除《超人》预告片里受批评的镜头</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/21/n14536088.md#1">2025首尔歌谣大奖揭晓 女团i-dle荣获大奖</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/19/n14534637.md#1">《复仇者5》赴英拍摄计划 暗示哨兵的故事线</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/19/n14534429.md#1">在夏天将瓢虫引进花园 可以帮你解决大问题</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/20/n14535227.md#1">灰尘在夏天容易堆积 这招可让家里清洁溜溜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/20/n14535369.md#1">这5种生活习惯会悄悄地伤肝 戒掉为上策</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/17/n14532801.md#1">“血管清道夫”黑木耳 三道药膳降三高</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/13/n14530763.md#1">研究：人们为何偏爱最不健康的食物</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651306.md#1">【军事情报局】普京拒绝和平 乌军还在红军村</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651372.md#1">【直播】NASA太空人告别太空站并关闭舱门</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651278.md#1">【新闻大家谈】美国家安全战略 把台湾推向高处</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638627.md#1">中产阶级想成为富人 需避免五大消费习惯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650329.md#1">十年来首次降价 五粮液开票价每瓶下调119元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650097.md#1">花滑大奖赛总决赛 华裔天才少女一举夺冠</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649691.md#1">《阿凡达3》官宣中文配音 豪华阵容引期待</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14649781.md#1">陈梦晒与黄晓明合照 已签约表哥公司成为艺人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14649845.md#1">研究人员找到让你吃泡菜的另一个理由</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/1/n14646629.md#1">厨房锅具摆放一目了然 轻松下厨不费力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/11/20/n14120358.htm">台国防部：美中军舰11月3日在太平岛12海里附近</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/11/20/n14120358.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
